--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -85,32 +85,35 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Projects</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Self Taught Programmer</h3>
-            <div class="subheading mb-3">HTML5 + CSS</div>
-            <p></p>
-            <div class="subheading mb-3">JavaScript</div>
-            <p></p>
+            <h3 class="mb-0">TypeR App</h3>
+            <div class="subheading mb-3">Python + Java + Objective-C + Xcode </div>
+            <p> An app that uses artificial intelligence to interpret images to recognize letters, and convert it to text.</p>
           </div>
-
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2018 - Present</span>
+            <span class="text-primary">WORK IN PROGRESS </span>
           </div>
         </div>
+
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">In Class Education</h3>
-            <div class="subheading mb-3">Python</div>
-            <p>2 years of programming classes</p>
+            <h3 class="mb-0">Personalized Strength Program Website</h3>
+            <div class="subheading mb-3">HTML5 + CSS + JavaScript</div>
+            <a href="https://shuhaibm.github.io/Workout-Website/homepage.html">https://shuhaibm.github.io/Workout-Website/homepage.html</a>
+            <p></p>
+            <p> Having to constantly be on my phone during workouts, calculating the weights I have to lift is both disruptive and tedious. In response to this, I created a website that will generates a six week strength program for me and those who want to try my workouts.</p>
+            <img src="Workoutpagescreenshot.png" width=800 height = 550>
+            <p>Through a series of calculations, that take multiple variables into account, this website will calculate your One Rep Max, as well as a Six Week Strength Program that will guide you through your next six weeks at the gym.</p>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2015 - July 2017 </span>
-          </div>
+
+          <div class="resume-date text-md-right"></div>
         </div>
+
+
         </div>
 
     </section>
@@ -126,10 +129,30 @@
             <h3 class="mb-0">University of British Columbia</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science</div>
-            <p></p>
+
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2019 - Current</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Coursera</h3>
+            <div class="subheading mb-3">Machine Learning - Stanford</div>
+            <div>Work In Progress</div>
+            <p><!p>
+            <p><!p>
+            <div class="subheading mb-3">Introduction to Web Development - UCDavis</div>
+            <div>Work In Progress</div>
+            <p><!p>
+            <p><!p>
+            <div class="subheading mb-3">Getting Started with Python - University of Michigan</div>
+            <div>Completed</div>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2019 - Current</span>
           </div>
         </div>
 
@@ -137,8 +160,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Sir Winston Churchill Secondary School</h3>
             <div class="subheading mb-3">International Baccaulaureate Program</div>
-
           </div>
+          <p><!p>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2017 - May 2019</span>
           </div>
@@ -163,7 +186,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills and Projects</h2>
+        <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
@@ -181,18 +204,15 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Projects</div>
+        <div class="subheading mb-3"> Completed Projects</div>
         <ul class="fa-ul mb-0">
-          <li> IN PROGRESS
-            <i class="fa-li fa fa-circle"></i>
-            </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Personalized Workout Program Website</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Personalized Workout Program Website</li>
-          <li>
+            Personalized Strength Program Website</li>
+
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              TypeR App</li>
 
         </ul>
       </div>
@@ -207,13 +227,15 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"></h3>
-            <div class="subheading mb-3">Food for Thought Fundraising</div>
+            <div class="subheading mb-3">Thunderbird Community Centre Event Facilitator </div>
             <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2017 - Nobember 2018 </span>
+            <span class="text-primary">April 2017 - Current </span>
           </div>
         </div>
+
+
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -237,14 +259,15 @@
           </div>
         </div>
 
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"></h3>
-            <div class="subheading mb-3">Thunderbird Community Centre Event Facilitator </div>
+            <div class="subheading mb-3">Food for Thought Fundraising</div>
             <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">April 2017 - Current </span>
+            <span class="text-primary">September 2017 - Nobember 2018 </span>
           </div>
         </div>
 
