--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           <div class="resume-content">
             <h3 class="mb-0">TypeR App</h3>
             <div class="subheading mb-3">Python + Java + Objective-C + Xcode </div>
-            <p> An app that uses artificial intelligence to interpret images to recognize letters, and convert it to text.</p>
+            <p> An IOS app that will interpret images, recognize letters and convert them to text for readers. This will involve the use of artificial intelligence and training the code to recognize and understand letters from an image, as well as basic app building processes.
+              </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">WORK IN PROGRESS </span>
