--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           </a>
           <a href="https://github.com/Shuhaibm">
             <i class="fab fa-github"></i>
+          <a href="resumecompsci.pdf">
+            <i class="fab fa-file-text-o"></i>
           </a>
         </div>
       </div>
