--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </a>
           <a href="https://github.com/Shuhaibm">
             <i class="fab fa-github"></i>
-          <a href="resumecompsci.pdf">
+          <a href="ResumeCompSci.pdf">
             <i class="fab fa-file-text-o"></i>
           </a>
         </div>
