--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         <div class="subheading mb-5">Vancouver, BC · (604) 862-2741 ·
           <a href="mailto:mesm.shuhaib@email.com">mesm.shuhaib@gmail.com</a>
         </div>
+
         <p class="lead mb-5">Currently studying as an undergrad student at the University of British Columbia for my Bachelors of Science, hoping to specialize in Computer Science.</p>
+
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/shuhaib-sm-b8a125197/">
             <i class="fab fa-linkedin-in"></i>
@@ -77,7 +79,7 @@
           <a href="https://github.com/Shuhaibm">
             <i class="fab fa-github"></i>
           <a href="ResumeCompSci.pdf">
-            <i class="fab fa-file-text-o"></i>
+            <i class="fab fa-resume">R </i>
           </a>
         </div>
       </div>
