--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="subheading mb-3">HTML5 + CSS + JavaScript</div>
             <a href="https://shuhaibm.github.io/Workout-Website/homepage.html">https://shuhaibm.github.io/Workout-Website/homepage.html</a>
             <p></p>
-            <p> Having to constantly be on my phone during workouts, calculating the weights I have to lift is both disruptive and tedious. In response to this, I created a website that will generates a six week strength program for me and those who want to try my workouts.</p>
+            <p> Having to constantly be on my phone during workouts, calculating the weights I have to lift is both disruptive and tedious. In response to this, I created a website that will generate a six week strength program for me and those who want to try my workouts.</p>
             <img src="Workoutpagescreenshot.png" width=800 height = 550>
             <p>Through a series of calculations, that take multiple variables into account, this website will calculate your One Rep Max, as well as a Six Week Strength Program that will guide you through your next six weeks at the gym.</p>
           </div>
