--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             <div class="subheading mb-3">HTML5 + CSS + JavaScript</div>
             <a href="https://shuhaibm.github.io/Workout-Website/homepage.html">https://shuhaibm.github.io/Workout-Website/homepage.html</a>
             <p></p>
-            <p> Having to constantly be on my phone during workouts, calculating the weights I have to lift is both disruptive and tedious. In response to this, I created a website that will generate a six week strength program for me and those who want to try my workouts.</p>
+            <p> One of my passions is to lift weights. I like to follow the program of one of the best powerlifters right now, but because I can't lift the same weights, I have to calculate how much I would need to lift. The constant need to be on my phone calculator during workouts was both disruptive and tedious. I decided to use my knowledge in JavaScript, CSS, and HTML to create a website that will generate the six-week strength program for me and those who want to try my workouts. Here is a plain example where I use my self-taught knowledge and implement it to make my everyday life more convenient.</p>
             <img src="Workoutpagescreenshot.png" width=800 height = 550>
-            <p>Through a series of calculations, that take multiple variables into account, this website will calculate your One Rep Max, as well as a Six Week Strength Program that will guide you through your next six weeks at the gym.</p>
+            <p>Through a series of calculations, that take multiple variables into account, this website will make calculations to determine your One Rep Max, and use it to develop as a Six Week Strength Program. This will guide you through your next six weeks at the gym.</p>
           </div>
 
           <div class="resume-date text-md-right"></div>
