--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="mailto:mesm.shuhaib@email.com">mesm.shuhaib@gmail.com</a>
         </div>
 
-        <p class="lead mb-5">Currently studying as an undergrad student at the University of British Columbia for my Bachelors of Science, hoping to specialize in Computer Science.</p>
+        <p class="lead mb-5">Computer Science Major, currently an undergrad student at the University of British Columbia </p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/shuhaib-mehri-b8a125197/">
@@ -91,17 +91,7 @@
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">TypeR App</h3>
-            <div class="subheading mb-3">Python + Java + Objective-C + Xcode </div>
-            <p> An IOS app that will interpret images, recognize letters and convert them to text for readers. This will involve the use of artificial intelligence and training the code to recognize and understand letters from an image, as well as basic app building processes.
-              </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">WORK IN PROGRESS </span>
-          </div>
-        </div>
+
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
