--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="mailto:mesm.shuhaib@email.com">mesm.shuhaib@gmail.com</a>
         </div>
 
-        <p class="lead mb-5">Computer Science Major, currently an undergrad student at the University of British Columbia </p>
+        <p class="lead mb-5">Computer Science Major at the University of British Columbia </p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/shuhaib-mehri-b8a125197/">
