--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"></h3>
-            <div class="subheading mb-3">Food for Thought Fundraising</div>
+            <div class="subheading mb-3">Food for Thought Fundraiser</div>
             <p></p>
           </div>
           <div class="resume-date text-md-right">
