--- a/index.html
+++ b/index.html
@@ -183,32 +183,26 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-python"></i>
-          </li>
-        </ul>
 
+        <div class="subheading mb-3"> Programming Languages and Tools</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-circle"></i>
+            Racket</li>
+                    <li>
+            <i class="fa-li fa fa-circle"></i>
+            Python</li>
+
+            <li>
+              <i class="fa-li fa fa-circle"></i>
+              HTML5</li>
+
+        </ul>
         <div class="subheading mb-3"> Completed Projects</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
             Personalized Strength Program Website</li>
-
-            <li>
-              <i class="fa-li fa fa-circle"></i>
-              TypeR App</li>
-
         </ul>
       </div>
     </section>
