--- a/index.html
+++ b/index.html
@@ -91,6 +91,39 @@
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
 
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+  <div class="resume-content">
+    <h3 class="mb-0">Corona Virus in Vancouver Website</h3>
+    <div class="subheading mb-3">HTML5 + CSS + JavaScript</div>
+    <a href="https://github.com/Shuhaibm/Corona-Virus-in-Vancouver">https://github.com/Shuhaibm/Corona-Virus-in-Vancouver</a>
+    <p></p>
+    <p> This project is an website, where the user is able to interact with a map, click on an area and see the outbreaks reported by Vancouver Costal Health, or add new outbreaks that they know of.</p>
+
+
+
+    <img src = "coronaviruswebsite.png" width=800 height = 550>
+
+
+  </div>
+
+  <div class="resume-date text-md-right"></div>
+</div>
+
+
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Calendar Application</h3>
+            <div class="subheading mb-3">Java</div>
+            <a href="https://github.com/Shuhaibm/Calendar">https://github.com/Shuhaibm/Calendar</a>
+            <p></p>
+            <p> This project is a calendar application, where the user is able to add and remove objectives to a specific date, mark them as complete, view the days, and has the option of saving or loading a project. </p>
+
+
+          </div>
+
+          <div class="resume-date text-md-right"></div>
+        </div>
 
 
 
