--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="subheading mb-3">HTML5 + CSS + JavaScript</div>
     <a href="https://github.com/Shuhaibm/Corona-Virus-in-Vancouver">https://github.com/Shuhaibm/Corona-Virus-in-Vancouver</a>
     <p></p>
-    <p> This project is an website, where the user is able to interact with a map, click on an area and see the outbreaks reported by Vancouver Costal Health, or add new outbreaks that they know of.</p>
+    <p> This project is a website where the user is able to interact with a map by clicking on an area to see the outbreaks reported by Vancouver Costal Health, or add new outbreaks that they know of.</p>
 
 
 
