--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </a>
           <a href="https://github.com/Shuhaibm">
             <i class="fab fa-github"></i>
-          <a href="ResumeCompSci.pdf">
+          <a href="ShuhaibMehriResume.pdf">
             <i class="fab fa-resume">R </i>
           </a>
         </div>
