--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <a href="https://devpost.com/software/easycc">https://devpost.com/software/easycc
             </a>
             <p></p>
-            <p> This was my first hackathon! My team and I created EasyC, a chrome extension that provides real-time closed captioning for any audio source
+            <p> This was my first hackathon! My team and I created EasyCC, a chrome extension that provides real-time closed captioning for any audio source
 running from your computer.</p>
         
         
