--- a/index.html
+++ b/index.html
@@ -82,130 +82,159 @@
 
             <h4 style="margin-top:10px; margin-bottom:10px;"><b>My Projects</b></h4>
 
-            <div class="project" style="background-color: #d289e3;"
-                onclick="window.location.href = 'https://shuhaibm.github.io/WhatsThisSong/';">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
-                </div>
-
-                <div class="projinfo">
-                    <h4 style="margin:0%;">WhatsThisSong</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
-
-                    <p>WhatsThisSong helps users discover songs by capturing audio and identify the music</p>
-                    <p>Click to try it out!</p>
-                    <img src="assets/whatsthissongdemo.gif" style="width:100%;">
-                    <br>
-                    <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/WhatsThisSong"><i
-                            style="font-size:30px;" class="fab fa-github"></i></a>
-                </div>
+            <div class="project" style="background-color: #b3cdc7;"
+                onclick="window.location.href = 'https://emotion-classifier.shuhaibmehri.repl.co/';"">
+                <div class=" col">
+                <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
             </div>
 
-            <div class="project" style="background-color: #85e377; cursor:auto;">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">JS + MongoDB</h3>
-                </div>
+            <div class="projinfo">
+                <h4 style="margin:0%;">WhatsThisSong</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
 
-                <div class="projinfo">
-                    <h4 style="margin:0%;">MyNotes</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">JS + MongoDB</h5>
-
-                    <p style="color: black;">MyNotes is a program that allows a user to store their notes.
-                        Functionalities
-                        include adding + removing Notes from database, and providing search results by sorted by
-                        relevancy
-                        based on an iterative dynamic programming string similarity algorithm </p>
-                    <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/MyNotes"><i style="font-size:30px;"
-                            class="fab fa-github"></i></a>
-                </div>
-            </div>
-
-            <div class="project" style="background-color: #83cbe6;"
-                onclick="window.location.href = 'https://devpost.com/software/easycc';">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
-                </div>
-
-                <div class="projinfo">
-                    <h4 style="margin:0%;">EasyCC - NWHacks Honourable Mention</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
-
-                    <p style="color: black;">This was my first hacakthon! In a team of four we created EasyCC, a chrome
-                        extension that provides real-time closed captioning for any audio source running from your
-                        computer.
-                        EasyCC supports all platforms including Zoom, Collaborate Ultra, Discord, Google Meet, and can
-                        even
-                        transcribe Youtube videos!</p>
-                    <p>Click to see it on devpost!</p>
-                    <img src="assets/EasyCC.jpeg" style="width: 100%;">
-                    <br>
-                    <a class="dsb" target="_blank" href="https://github.com/benjelloo/EasyCC"><i style="font-size:30px;"
-                            class="fab fa-github"></i></a>
-                </div>
-            </div>
-
-            <div class="project" style="background-color: #8d99d8; cursor:auto;">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">Java + XML</h3>
-                </div>
-
-                <div class="projinfo">
-                    <h4 style="margin:0%;">BikePark Android Application</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">Java + XML</h5>
-
-                    <p style="color: black;">Bike Park is an android application that will let you know if it is safe to
-                        park your bike. It will provide a risk assessment for bike theft based on your location, using
-                        the
-                        information provided by bikewise.org.</p>
-
-                    <img src="assets/BikePark.jpeg" style="width: 100%;">
-                    <br>
-                    <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/BikePark"><i
-                            style="font-size:30px;" class="fab fa-github"></i></a>
-                </div>
-            </div>
-
-
-            <div class="project" style="background-color: #cbf8bc; cursor:auto;">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">Java</h3>
-                </div>
-
-                <div class="projinfo">
-                    <h4 style="margin:0%; ">Calendar Application</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">Java</h5>
-
-                    <p style="color: black;">Java calendar program with CRUD functionality, JFrame UI, and JSON
-                        processing.
-                        User can add and remove objectives from a day, mark as complete, view, save or load a calendar.
-                    </p>
-                    <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Calendar"><i
-                            style="font-size:30px;" class="fab fa-github"></i></a>
-                </div>
-            </div>
-
-
-
-
-            <div class="project" style="background-color: #0576a6;"
-                onclick="window.location.href = 'https://shuhaibm.github.io/Workout-Website/Workoutpage.html';">
-                <div class="col">
-                    <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
-                </div>
-
-                <div class="projinfo">
-                    <h4 style="margin:0%;">Strength Program Website</h4>
-                    <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
-
-                    <p style="color: black;">This is one of my most useful projects - saves me time and effort! Website
-                        that
-                        will provide user with a personalized strength program based on a number of features.</p>
-                    <p>Click to check it out!</p>
-                    <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Workout-Website"><i
-                            style="font-size:30px;" class="fab fa-github"></i></a>
-                </div>
+                <p>This summer I took CPSC 340: Machine Learning and Data Mining. I had a lot of fun taking the
+                    course, and one part of the course that really stood out to me was ensemble machine learning
+                    models. I decided to further explore it with this project.</p>
+                <p>
+                    I developed several NLP Machine Learning Models that classify the emotion when given a string.
+                    The model with the highest accuracy score was my Stacking Ensemble Model with the following
+                    properties:
+                <ul>
+                    <li>Meta Model: Random Forest</li>
+                    <li>Base Model: Naïve Bayes, Random Forest, Logistic Regression</li>
+                    <li>Data concatenated with base model predictions</li>
+                </ul>
+                Click to check it out!
+                </p>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Emotion-Classifier"><i
+                        style="font-size:30px;" class="fab fa-github"></i></a>
             </div>
         </div>
+
+        <div class="project" style="background-color: #d289e3;"
+            onclick="window.location.href = 'https://shuhaibm.github.io/WhatsThisSong/';">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%;">WhatsThisSong</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
+
+                <p>WhatsThisSong helps users discover songs by capturing audio and identify the music</p>
+                <p>Click to try it out!</p>
+                <img src="assets/whatsthissongdemo.gif" style="width:100%;">
+                <br>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/WhatsThisSong"><i
+                        style="font-size:30px;" class="fab fa-github"></i></a>
+            </div>
+        </div>
+
+        <div class="project" style="background-color: #85e377; cursor:auto;">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">JS + MongoDB</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%;">MyNotes</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">JS + MongoDB</h5>
+
+                <p style="color: black;">MyNotes is a program that allows a user to store their notes.
+                    Functionalities
+                    include adding + removing Notes from database, and providing search results by sorted by
+                    relevancy
+                    based on an iterative dynamic programming string similarity algorithm </p>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/MyNotes"><i style="font-size:30px;"
+                        class="fab fa-github"></i></a>
+            </div>
+        </div>
+
+        <div class="project" style="background-color: #83cbe6;"
+            onclick="window.location.href = 'https://devpost.com/software/easycc';">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%;">EasyCC - NWHacks Honourable Mention</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
+
+                <p style="color: black;">This was my first hacakthon! In a team of four we created EasyCC, a chrome
+                    extension that provides real-time closed captioning for any audio source running from your
+                    computer.
+                    EasyCC supports all platforms including Zoom, Collaborate Ultra, Discord, Google Meet, and can
+                    even
+                    transcribe Youtube videos!</p>
+                <p>Click to see it on devpost!</p>
+                <img src="assets/EasyCC.jpeg" style="width: 100%;">
+                <br>
+                <a class="dsb" target="_blank" href="https://github.com/benjelloo/EasyCC"><i style="font-size:30px;"
+                        class="fab fa-github"></i></a>
+            </div>
+        </div>
+
+        <div class="project" style="background-color: #8d99d8; cursor:auto;">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">Java + XML</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%;">BikePark Android Application</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">Java + XML</h5>
+
+                <p style="color: black;">Bike Park is an android application that will let you know if it is safe to
+                    park your bike. It will provide a risk assessment for bike theft based on your location, using
+                    the
+                    information provided by bikewise.org.</p>
+
+                <img src="assets/BikePark.jpeg" style="width: 100%;">
+                <br>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/BikePark"><i style="font-size:30px;"
+                        class="fab fa-github"></i></a>
+            </div>
+        </div>
+
+
+        <div class="project" style="background-color: #cbf8bc; cursor:auto;">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">Java</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%; ">Calendar Application</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">Java</h5>
+
+                <p style="color: black;">Java calendar program with CRUD functionality, JFrame UI, and JSON
+                    processing.
+                    User can add and remove objectives from a day, mark as complete, view, save or load a calendar.
+                </p>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Calendar"><i style="font-size:30px;"
+                        class="fab fa-github"></i></a>
+            </div>
+        </div>
+
+
+
+
+        <div class="project" style="background-color: #0576a6;"
+            onclick="window.location.href = 'https://shuhaibm.github.io/Workout-Website/Workoutpage.html';">
+            <div class="col">
+                <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
+            </div>
+
+            <div class="projinfo">
+                <h4 style="margin:0%;">Strength Program Website</h4>
+                <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
+
+                <p style="color: black;">This is one of my most useful projects - saves me time and effort! Website
+                    that
+                    will provide user with a personalized strength program based on a number of features.</p>
+                <p>Click to check it out!</p>
+                <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Workout-Website"><i
+                        style="font-size:30px;" class="fab fa-github"></i></a>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 
