--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="projinfo">
-                <h4 style="margin:0%;">WhatsThisSong</h4>
+                <h4 style="margin:0%;">Emotion Classifier</h4>
                 <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
 
                 <p>This summer I took CPSC 340: Machine Learning and Data Mining. I had a lot of fun taking the
