--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <div class="project" style="background-color: #b3cdc7;"
                 onclick="window.location.href = 'https://emotion-classifier.shuhaibmehri.repl.co/';"">
                 <div class=" col">
-                <h3 class="mobile" style="color:grey;">HTML + CSS + JS</h3>
+                <h3 class="mobile" style="color:grey;">Python + HTML + CSS + JS</h3>
             </div>
 
             <div class="projinfo">
                 <h4 style="margin:0%;">Emotion Classifier</h4>
-                <h5 class="pc" style="color:grey; margin:1%;">HTML + CSS + JS</h5>
+                <h5 class="pc" style="color:grey; margin:1%;">Python + HTML + CSS + JS</h5>
 
                 <p>This summer I took CPSC 340: Machine Learning and Data Mining. I had a lot of fun taking the
                     course, and one part of the course that really stood out to me was ensemble machine learning
