--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     models. I decided to further explore it with this project.</p>
                 <p>
                     I developed several NLP Machine Learning Models that classify the emotion when given a string.
-                    The model with the highest accuracy score was my Stacking Ensemble Model with the following
+                    The model with the highest accuracy score (90.55%) was my Stacking Ensemble Model with the following
                     properties:
                 <ul>
                     <li>Meta Model: Random Forest</li>
