--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
 
             <div class="projinfo">
-                <h4 style="margin:0%;">Emotion Classifier</h4>
+                <h4 style="margin:0%;">Emotion Classifier API</h4>
                 <h5 class="pc" style="color:grey; margin:1%;">Python + HTML + CSS</h5>
 
                 <p>This summer I took CPSC 340: Machine Learning and Data Mining. I had a lot of fun taking the
@@ -97,7 +97,8 @@
                     models. I decided to further explore it with this project.</p>
                 <p>
                     I developed several NLP Machine Learning Models that classify the emotion when given a string.
-                    The model with the highest accuracy score (90.55%) was my Stacking Ensemble Model with the following
+                    I built an API with the model that had the highest accuracy score (90.55%), my Stacking Ensemble
+                    Model with the following
                     properties:
                 <ul>
                     <li>Meta Model: Random Forest</li>
