--- a/index.html
+++ b/index.html
@@ -97,15 +97,16 @@
                     models. I decided to further explore it with this project.</p>
                 <p>
                     I developed several NLP Machine Learning Models that classify the emotion when given a string.
-                    I built an API with the model that had the highest accuracy score (90.55%), my Stacking Ensemble
-                    Model with the following
+                    The model that had the highest accuracy score (90.55%) was my Stacking Ensemble Model with the
+                    following
                     properties:
                 <ul>
                     <li>Meta Model: Random Forest</li>
                     <li>Base Model: Naïve Bayes, Random Forest, Logistic Regression</li>
                     <li>Data concatenated with base model predictions</li>
                 </ul>
-                Click to check it out!
+
+                I went on to build an API using this model. Click to check it out!
                 </p>
                 <a class="dsb" target="_blank" href="https://github.com/Shuhaibm/Emotion-Classifier"><i
                         style="font-size:30px;" class="fab fa-github"></i></a>
