--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
                         Renewables | Sep 2021 - Present</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Incoming developer as of September 2021</li>
+                            <li>Working on the Platform Team with ownership of Data Access, Internal Tools + Realtime
+                                System</li>
+                            <li>Responsible for the development, implementation, and testing of the Internal Tool
+                                Portal, Notification Service, Realtime Service, Data Export, User login and
+                                authentication, User-Entered Events, Status Code Editor</li>
+
                         </p>
                     </ul>
                 </div>
@@ -70,7 +75,9 @@
                         CopySmith | Sep 2020 - Oct 2020</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Developed key features of the Company website using React and HTML/CSS</li>
+                            <li>• As a Web Development Engineer, I worked hand-in-hand with a designer and implemented
+                                design concepts to develop key features of the company web app using React and HTML/CSS
+                            </li>
 
                         </p>
                     </ul>
