--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
                         Renewables | Sep 2021 - Present</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Working on the Platform Team with ownership of Data Access, Internal Tools + Realtime
+                            <li>Working on the Platform Team with ownership of Data Access, Internal Tools as well as
+                                Realtime
                                 System</li>
                             <li>Responsible for the development, implementation, and testing of the Internal Tool
                                 Portal, Notification Service, Realtime Service, Data Export, User login and
-                                authentication, User-Entered Events, Status Code Editor</li>
+                                authentication, User-Entered Events, as well as the Status Code Editor</li>
 
                         </p>
                     </ul>
@@ -75,7 +76,7 @@
                         CopySmith | Sep 2020 - Oct 2020</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>• As a Web Development Engineer, I worked hand-in-hand with a designer and implemented
+                            <li>As a Web Development Engineer, I worked hand-in-hand with a designer and implemented
                                 design concepts to develop key features of the company web app using React and HTML/CSS
                             </li>
 
