--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
                         Renewables | Sep 2021 - Present</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Working on the Platform Team with ownership of Data Access, Internal Tools as well as
-                                Realtime
-                                System</li>
-                            <li>Responsible for the development, implementation, and testing of the Internal Tool
-                                Portal, Notification Service, Realtime Service, Data Export, User login and
-                                authentication, User-Entered Events, as well as the Status Code Editor</li>
+                            <li>Provide software for the management and reporting of over 1000 renewable energy assets
+                            </li>
+                            <li>Use Cypress, gRPC, Python and React to work on the implementation, development and
+                                testing of an internal tool portal, data access, user login and authentication as well
+                                as realtime systems</li>
+                            <li>Integrated changes to improve functionality and efficiency of code, enhance user
+                                experience, fix bugs as well as improve communication between services</li>
 
                         </p>
                     </ul>
@@ -62,9 +63,11 @@
                         2020 - Present</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Selected to assist the professor for CPSC 121: Models of Computation</li>
-                            <li>Duties include grading student work + running/organizing labs, office hours, and review
-                                sessions</li>
+                            <li>Assisted the professor throughout multiple terms to run CPSC 121: Models of
+                                Computation</li>
+                            <li>Responsible for lecturing and organizing sections of up to 30 students during labs,
+                                office hours and review sessions, as well as grading course material and invigilating
+                                exams</li>
                         </p>
                     </ul>
                 </div>
@@ -76,8 +79,9 @@
                         CopySmith | Sep 2020 - Oct 2020</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>As a Web Development Engineer, I worked hand-in-hand with a designer and implemented
-                                design concepts to develop key features of the company web app using React and HTML/CSS
+                            <li>Worked hand-in-hand with a designer to implement design concepts and independently
+                                built key-features of the front-end interface for an early-stage startup using React and
+                                HTML/CSS
                             </li>
 
                         </p>
