updated web page

--- a/index.html
+++ b/index.html
@@ -36,59 +36,66 @@
 
         <div class="projects">
             <h4 style="margin-top:10px; margin-bottom:0px;"><b>Work Experience</b></h4>
-
-
+            
             <div class="project" style="cursor: auto;">
                 <div class="info">
-                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">Software Developer Intern @ Clir
-                        Renewables | Sep 2021 - Present</h5>
+                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">Amazon - Software Development Engineer Intern | May - Aug 2022</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Provide software for the management and reporting of over 1000 renewable energy assets
+                            <li>Engineered for Amazon’s platform independent HTTP interface for rendering content that provides customer
+                                ready rendered HTML for web pages while giving the client control over the types of content and UI
                             </li>
-                            <li>Use Cypress, gRPC, Python and React to work on the implementation, development and
-                                testing of an internal tool portal, data access, user login and authentication as well
-                                as realtime systems</li>
-                            <li>Integrated changes to improve functionality and efficiency of code, enhance user
-                                experience, fix bugs as well as improve communication between services</li>
-
+                            <li>Architected the design and development of a command line interface that uses cloud computing to generate
+                                and register consumer ready metadata to enable Page Self-Service-Onboarding and Updating</li>
+                            <li>Reduced team operation load and improved client experience by working on multiple services across different
+                                teams to automate a process that has ~5 requests/week and a 10 day service-level agreement</li>
                         </p>
                     </ul>
                 </div>
-            </div>
+            </div>    
 
             <div class="project" style="cursor: auto;">
                 <div class="info">
-                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">Teaching Assistant @ UBC | Oct
-                        2020 - Present</h5>
+                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">Clir Renewables - Software Developer Intern | Sep - Dec 2021</h5>
                     <ul class="tab" style="margin:5px;">
                         <p style="color: black; margin:0px;">
-                            <li>Assisted the professor throughout multiple terms to run CPSC 121: Models of
-                                Computation</li>
-                            <li>Responsible for lecturing and organizing sections of up to 30 students during labs,
-                                office hours and review sessions, as well as grading course material and invigilating
-                                exams</li>
-                        </p>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="project" style="cursor: auto;">
-                <div class="info">
-                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">Software Engineer Intern @
-                        CopySmith | Sep 2020 - Oct 2020</h5>
-                    <ul class="tab" style="margin:5px;">
-                        <p style="color: black; margin:0px;">
-                            <li>Worked hand-in-hand with a designer to implement design concepts and independently
-                                built key-features of the front-end interface for an early-stage startup using React and
-                                HTML/CSS
+                            <li>Built and deployed a reporting and managing software that maintains 1000+ renewable energy assets
                             </li>
+                            <li>Used Python, React, Cypress, and gRPC to develop and test an internal tool portal, data access, user login and
+                                authentication as well as notification services</li>
+                            <li>Integrated changes to deliver sprints on time and within scope, improved functionality and efficiency of code,
+                                introduced features, enhanced user experience, fixed bugs and improved communication between services</li>
 
                         </p>
                     </ul>
                 </div>
             </div>
 
+            <div class="project" style="cursor: auto;">
+                <div class="info">
+                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;"> CopySmith - Software Engineer Intern | Sep - Oct 2020</h5>
+                    <ul class="tab" style="margin:5px;">
+                        <p style="color: black; margin:0px;">
+                            <li>Independently built key-features of the front-end interface for an early-stage startup using React + HTML/CSS</li>
+                            <li>Directed the design process and collaborated alongside other designers with a product driven mindset</li>
+
+                        </p>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="project" style="cursor: auto;">
+                <div class="info">
+                    <h5 style="color:grey; margin-bottom:0px; margin-top:0px;">UBC - Teaching Assistant</h5>
+                    <ul class="tab" style="margin:5px;">
+                        <p style="color: black; margin:0px;">
+                            <li>Introduction to Software Engineering (CPSC 310), Models of Computation (CPSC 121)</li>
+                            <li>Led programming labs, office hours and review sessions for over 300 students in principle cs courses throughout multiple terms</li>
+                            
+                        </p>
+                    </ul>
+                </div>
+            </div>
 
 
 
