--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                 </div>
 
                 <div class="mt-2" style="text-align: center;">
-                    <a class="mr-4" href="./assets/ShuhaibMehriResume.pdf" style="font-size:20px;">
+                    <a class="mr-4" href="./assets/cv.pdf" style="font-size:20px;">
                         <i class="ai ai-cv ai-1x"></i></a>
+                    <a class="mr-4" href="./assets/ShuhaibMehriResume.pdf" style="font-size:20px;">
+                        <i class="fa-regular fa-file"></i></a>
                     <!-- <a class="mr-4" href="TODO">
                         <i style="font-size:20px; color:black;" class="fa-solid fa-graduation-cap"></i></a> -->
                     <a class="mr-4" href="https://github.com/Shuhaibm">
