--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="clearfix">
                     <p>I am a 5th year Computer Science student at the University of British Columbia.</p>
-                    <p>My primary research interest is in the natural language processing field. I have worked on the automatic evaluation of generative models with <strong>Vered Schwartz</strong>, and am currently working on exploiting question-answering generation to model discourse relations with <strong>Giuseppe Carenini</strong>.</p>
+                    <p>My primary research interest is in the natural language processing field. I have worked on the automatic evaluation of generative models with <strong>Vered Shwartz</strong>, and am currently working on exploiting question-answering generation to model discourse relations with <strong>Giuseppe Carenini</strong>.</p>
                     <p>I have also gained valuable industry experience from three internships at Amazon, and one at Clir Renewables.</p>
                 </div>
 
@@ -63,8 +63,12 @@
                     <div class="table-responsive">
                         <table class="table table-sm table-borderless">
                             <tr>
+                                <th >10/2023</th>
+                                <td> My submission was accepted into <a href="https://2023.emnlp.org/">EMNLP 2023</a>! I look forward to attending the conference and presenting my research </td>
+                            </tr>
+                            <tr>
                                 <th >08/2023</th>
-                                <td> Submitted my paper on the Automatic Evaluation of Generative Models to the <a href="https://gem-benchmark.com/workshop">Gem Workshop</a> at EMNLP 2023! </td>
+                                <td> Submitted my paper on the Automatic Evaluation of Generative Models to the <a href="https://gem-benchmark.com/workshop">Gem Workshop</a> at <a href="https://2023.emnlp.org/">EMNLP 2023</a> </td>
                             </tr>
                             <tr>
                                 <th >08/2023</th>
@@ -80,15 +84,10 @@
                     <h3><bold>Publications</bold></h3>
                     <ul class="bibliography">
                         <li>
-                            <div class="row">
-                                <div id="PhysRev.47.777" class="col-sm-8">
-                                    <div>Automatic Evaluation of Generative Models with Instruction Tuning</div>
-                                    <div class="author"> 
-                                        <em>Shuhaib Mehri</em>,
-                                         <a>Vered Schwartz</a>
-                                    </div>
-                                </div>
-                            </div>
+
+                                    <div><em>Shuhaib Mehri</em>, Vered Shwartz. Automatic Evaluation of Generative Models with Instruction Tuning. EMNLP 2023.</div>
+
+
                         </li>
                     </ul>
                 </div>
