--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                     <ul class="bibliography">
                         <li>
 
-                                    <div><em>Shuhaib Mehri</em>, Vered Shwartz. Automatic Evaluation of Generative Models with Instruction Tuning. EMNLP 2023.</div>
+                                    <div>
+                                        <b>Shuhaib Mehri</b>, Vered Shwartz. <b><a href="https://arxiv.org/abs/2310.20072">Automatic Evaluation of Generative Models with Instruction Tuning</a></b> <br>
+
+                                        <i>in Empirical Methods in Natural Language Processing (EMNLP) 2023.</i></div>
 
 
                         </li>
