--- a/index.html
+++ b/index.html
@@ -63,16 +63,24 @@
                     <div class="table-responsive">
                         <table class="table table-sm table-borderless">
                             <tr>
+                                <th >01/2024</th>
+                                <td> <strong>🎉 Exciting News! 🎉</strong> My  submission has been accepted at <strong><a href="https://sites.google.com/view/codi2024">CODI 2024</a></strong>, the workshop on Computational Approaches to Discourse, part of <a href="https://www.eacl2024.org"><strong>EACL 2024</strong></a>. </td>
+                            </tr>
+                            <tr>
+                                <th >01/2024</th>
+                                <td> Started my internship at <strong>iClinic Systems Inc.</strong> today. I will be working on information extraction in a clinical setting.</td>
+                            </tr>
+                            <tr>
                                 <th >10/2023</th>
-                                <td> My submission was accepted into <a href="https://2023.emnlp.org/">EMNLP 2023</a>! I look forward to attending the conference and presenting my research </td>
+                                <td> <strong>🎉 Exciting News! 🎉</strong> My paper has been accepted at <strong><a href="https://2023.emnlp.org/">EMNLP 2023</a></strong>! Looking forward to attending my first research conference and presenting my work in Singapore! </td>
                             </tr>
                             <tr>
                                 <th >08/2023</th>
-                                <td> Submitted my paper on the Automatic Evaluation of Generative Models to the <a href="https://gem-benchmark.com/workshop">Gem Workshop</a> at <a href="https://2023.emnlp.org/">EMNLP 2023</a> </td>
+                                <td> Submitted my first paper on automatic evaluation of generative models to the <strong><a href="https://gem-benchmark.com/workshop">Gem Workshop</a> at <a href="https://2023.emnlp.org/">EMNLP 2023</a></strong>. </td>
                             </tr>
                             <tr>
                                 <th >08/2023</th>
-                                <td> Succesfully completed my internship at Amazon, where I designed, built and deployed an interactive data visualization tool.</td>
+                                <td> Succesfully completed my internship at <strong>Amazon</strong>, where I designed, built and deployed an interactive data visualization tool.</td>
                             </tr>
                             
                         </table>
